--- a/package.json
+++ b/package.json
@@ -7,9 +7,22 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "astro": "^2.3.0"
+    "@astrojs/react": "^2.1.1",
+    "@astrojs/tailwind": "^3.1.1",
+    "@types/react": "^18.0.35",
+    "@types/react-dom": "^18.0.11",
+    "aos": "^3.0.0-beta.6",
+    "astro": "^2.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.1"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.4",
+    "gh-pages": "^5.0.0"
   }
 }
